# py-SPATA2

./: .gitignore  NAMESPACE_PARITY.md  README.md  RECONSTRUCTION_REPORT.md  pyproject.toml
benchmarks/: benchmark_spata2py.py
benchmarks/results/: spata2py_benchmark.json  spata2py_benchmark.md
references/: spata2_namespace_parity.csv
scripts/: audit_namespace.py
spata2py/: __init__.py  _core.py  fixtures.py
tests/: test_core.py
